--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <h3>Camilan Manis</h3>
             <div class="snack-list">
                 <ul>
-                    <li>Cheesecake Lumer</li>
-                    <li>Croissant Cokelat</li>
-                    <li>Donat Kampung</li>
-                    <li>Keju Aroma</li>
+                    <li>Cheesecake Lumer - Rp 20.000</li>
+                    <li>Croissant Cokelat - Rp 25.000</li> 
+                    <li>Donat Kampung - Rp 8.000</li>
+                    <li>Keju Aroma - Rp 13.000</li>
                 </ul>
             </div>
         </section>
