--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="container">
         
         <div class="hero">
-            <h1>Ngopi Dulu Nggak Sihh,Biar Hidup Stay Calm</h1>
+            <h1>Roso Kediri,Sruput Sejati</h1>
         </div>
         
         <section id="tentang" class="section">
