--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="cappuccino.jpg" alt="Cappuccino" title="Cappuccino">
+                    <img src="cappuccinoooooo.jpg" alt="Cappuccino" title="Cappuccino">
                     <h4>Cappuccino</h4>
                     <p>Rp 10.000</p>
                 </div>
