--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="menu-grid">
                 
                 <div class="menu-item">
-                    <img src="espresso.jpg" alt="Espresso" title="Espresso">
+                    <img src="kopi espressoooo.jpg" alt="Espresso" title="Espresso">
                     <h4>Espresso</h4>
                     <p>Rp 22.000</p>
                 </div>
