--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="latte-caramel.jpg" alt="Latte Caramel" title="Latte Caramel">
+                    <img src="caramel.jpg" alt="Latte Caramel" title="Latte Caramel">
                     <h4>Latte Caramel</h4>
                     <p>Rp 24.000</p>
                 </div>
 
                 <div class="menu-item">
-                    <img src="kopi-susu-senja.jpg" alt="Kopi Susu Senja" title="Kopi Susu Senja (House Blend)">
+                    <img src="kopi susu.jpg" alt="Kopi Susu Senja" title="Kopi Susu Senja (House Blend)">
                     <h4>Kopi Susu Senja</h4>
                     <p>Rp 13.000</p>
                 </div>
