--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="cappuccinoooooo.jpg" alt="Cappuccino" title="Cappuccino">
+                    <img src="cappucinoooooo.jpg" alt="Cappuccino" title="Cappuccino">
                     <h4>Cappuccino</h4>
                     <p>Rp 10.000</p>
                 </div>
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="kopi susu.jpg" alt="Kopi Susu Senja" title="Kopi Susu Senja (House Blend)">
+                    <img src="kopi susu.jpeg" alt="Kopi Susu Senja" title="Kopi Susu Senja (House Blend)">
                     <h4>Kopi Susu Senja</h4>
                     <p>Rp 13.000</p>
                 </div>
