--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Selamat datang di Kopi Senja, tempat di mana aroma kopi bertemu dengan suasana yang hangat dan nyaman. Kami menyajikan biji kopi pilihan terbaik dari seluruh Nusantara. Sempurna untuk bekerja, bersantai, atau berkumpul bersama teman.</p>
             </div>
             <div class="section-image">
-                <img src="interior-kafe.jpg" alt="Interior Kafe Kopi Senja" title="Suasana Nyaman Kafe Kami">
+                <img src="foto cafe.jpg" alt="Interior Kafe Kopi Senja" title="Suasana Nyaman Kafe Kami">
             </div>
         </section>
 
