--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="menu-item">
                     <img src="cappucinoooooo.jpg" alt="Cappuccino" title="Cappuccino">
                     <h4>Cappuccino</h4>
-                    <p class="price">Rp 10.000</p> </div>
+                    <p class="price">Rp 19.000</p> </div>
 
                 <div class="menu-item">
                     <img src="caramel.jpg" alt="Latte Caramel" title="Latte Caramel">
@@ -64,13 +64,14 @@
                 <div class="menu-item">
                     <img src="kopi susu.jpeg" alt="Kopi Susu Senja" title="Kopi Susu Senja (House Blend)">
                     <h4>Kopi Susu Senja</h4>
-                    <p class="price">Rp 13.000</p> </div>
+                    <p class="price">Rp 21.000</p> </div>
 
             </div>
             
             <h3>Camilan Manis (Pesan Langsung ke Kasir)</h3>
             <div class="snack-list">
-                <ul>
+                <ul> 
+                    <p class="price">Rp 24.000</p> </div>
                     <li>Cheesecake Lumer - Rp 20.000</li>
                     <li>Croissant Cokelat - Rp 25.000</li> 
                     <li>Donat Kampung - Rp 8.000</li>
@@ -93,7 +94,7 @@
         <section id="lokasi" class="section">
             <div class="section-content">
                 <h2>Temukan Kami</h2>
-                <p>Jl. Cinta No. 22, Kota Kediri. Kami buka setiap hari dari pukul 08:00 hingga 21:00.</p>
+                <p>Jl. Cinta No. 22, Kota Kediri. Kami buka setiap hari dari pukul 08:00-21:00.</p>
             </div>
         </section>
 
