--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p class="price">Rp 21.000</p> </div>
                 
                  <div class="menu-item">
-                    <img src="kopi susu.jpeg" alt="CheeseCake" title="CheeseCake (House Blend)">
+                    <img src="cheesecake.jfif" alt="CheeseCake" title="CheeseCake (House Blend)">
                     <h4>Kopi Susu Senja</h4>
                     <p class="price">Rp 30.000</p> </div>
 
