--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
                     <p class="price">Rp 30.000</p> </div>
                 
                 <div class="menu-item">
-                    <img src="cinnamon.jfif" alt="Cinnamon Roll" title="Cinnamon Roll (House Blend)">
+                    <img src="cinamon.jpg" alt="Cinnamon Roll" title="Cinnamon Roll (House Blend)">
                     <h4>Cinnamon Roll</h4>
                     <p class="price">Rp 25.000</p> </div>
 
                  <div class="menu-item">
-                    <img src="kentang.jfif" alt="French Fries" title="French Fries (House Blend)">
+                    <img src="kentang.jpg" alt="French Fries" title="French Fries (House Blend)">
                     <h4>French Fries</h4>
                     <p class="price">Rp 13.000</p> </div>
 
                  <div class="menu-item">
-                    <img src="Dimsum mentai.jfif" alt="Dimsum Mentai" title="Dimsum Mentai (House Blend)">
+                    <img src="dimsum.jpg" alt="Dimsum Mentai" title="Dimsum Mentai (House Blend)">
                     <h4>Dimsum Mentai</h4>
                     <p class="price">Rp 25.000</p> </div>
 
