Update order section heading in index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
         
         <section id="order-section" class="section call-to-action">
-            <h2>Pesan Kopi Anda Sekarang!</h2>
+            <h2>Pesan Menu Anda Sekarang!</h2>
             <p>Pilih menu dengan tombol "Tambah", atur jumlah di keranjang, masukkan nomor meja, lalu klik tombol pesan untuk mengirimkan pesanan melalui WhatsApp.</p>
 
             <div class="order-row">
